[a11y] Links color contrast fix

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -17,5 +17,11 @@
 }
 
 .footer__link {
+  color: white;
   margin-right: 20px;
+}
+
+.footer__link:hover,
+.footer__link:focus {
+  color: white;
 }
